# bighead

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py  test.sh
.github/workflows/: test.yml
bighead/: __init__.py  face_detection.py  web.py
test/: test_face_detection.py  test_web.py
